# Image-Descripter

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  app.py  imagenet_class_index.json  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
Image-Descripter/: LICENSE  Makefile  README.md  setup.py
Image-Descripter/docs/: Makefile  conf.py  index.rst  make.bat
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
research/: image_detection_inception.ipynb
src/image_descripter/: __init__.py  image_descripter.py
src/image_descripter/image_description/: image_descripter.py
src/image_descripter/image_recognizer/: image_recognization.py
tests/: __init__.py  test_image_descripter.py
