[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_descripter"
version = "0.1.0"
description = "this tool can generate the image description which you have provided."
readme = "README.rst"
authors = [
    {name = "Rohit Pawar", email = "rppawar491@gmail.com"}
]
maintainers = [
    {name = "Rohit Pawar", email = "rppawar491@gmail.com"}
]
classifiers = []
license = {text = "MIT license"}
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/RohitPawar001/image_descripter/issues"
changelog = "https://github.com/RohitPawar001/image_descripter/blob/master/changelog.md"
homepage = "https://github.com/RohitPawar001/image_descripter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
